2011-02-15  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GStreamer] Video player sets system volume to 100%
        https://bugs.webkit.org/show_bug.cgi?id=54140

        Don't explicitely set volume at startup and use the
        GstStreamVolume interface with cubic volume scale when
        updating/retrieving the volume value. This gives a much better
        user-experience.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/68567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78571 268f45cc-cd09-0410-ab3c-d52691b4dbfc